completed semantic, fixed headers, release publish question, challenges panel

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -112,6 +112,10 @@
   flex-direction: row;
   justify-content: space-between;
 }
+.course_cell{
+  width:25%;
+  text-align: left;
+}
 .coursecontainer{
   padding: 20px;
 }
