--- a/src/css/App.css
+++ b/src/css/App.css
@@ -5,6 +5,7 @@
 
 }
 
+
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
@@ -69,6 +70,20 @@ html, body {
   align-items: center;
   height:75px;
   padding:10px;
+  color:blue;
+  position: fixed; /* Set the navbar to fixed position */
+  top: 0; /* Position the navbar at the top of the page */
+  width: 100%;
+  z-index: 10000;
+  -webkit-box-shadow: 0px 3px 13px -1px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 3px 13px -1px rgba(0,0,0,0.75);
+  box-shadow: 0px 3px 13px -1px rgba(0,0,0,0.75);
+}
+
+.header1 {
+  background-color: #21385b;
+  height:75px;
+  padding:15px;
   color:blue;
   position: fixed; /* Set the navbar to fixed position */
   top: 0; /* Position the navbar at the top of the page */
@@ -151,8 +166,14 @@ html, body {
   height:400px;
 }
 
+.dashboard-button{
+  width:250px;
+  align:"left";
+}
+
 .sign-button{
-  width:100px;
+  width:200px;
+  align:"right";
 }
 
 .testselect{
